Code changed so that it now works on the remote nodes. For the namingserver there is a different command than the remote nodes in the ring structure when you run it.