@@ -1,33 +1,26 @@
 package uantwerpen.be.fti.ei.Project.storage;
 
-import java.io.*;
+import java.io.IOException;
 import java.nio.file.*;
-import java.util.*;
+import java.util.Set;
 
 public class FileStorage {
-    private static final String BASE_DIR = "nodes_storage/";
+    private static final String BASE = "nodes_storage/";
 
-    public static void storeFile(String nodeIp, String fileName, String content) throws IOException {
-        Path nodeDir = Paths.get(BASE_DIR + nodeIp);
-        if (!Files.exists(nodeDir)) {
-            Files.createDirectories(nodeDir);
-        }
-        Path filePath = nodeDir.resolve(fileName + ".txt");
-        Files.write(filePath, content.getBytes());
+    public static void storeFile(String ip, String fileName, String content) throws IOException {
+        Path dir = Paths.get(BASE + ip);
+        if (!Files.exists(dir)) Files.createDirectories(dir);
+        Files.writeString(dir.resolve(fileName + ".txt"), content);
     }
 
-    public static void moveFile(String sourceNodeIp, String targetNodeIp, String fileName) throws IOException {
-        Path source = Paths.get(BASE_DIR + sourceNodeIp + "/" + fileName + ".txt");
-        Path targetDir = Paths.get(BASE_DIR + targetNodeIp);
-
-        if (!Files.exists(targetDir)) {
-            Files.createDirectories(targetDir);
-        }
-
-        Files.move(source, targetDir.resolve(fileName + ".txt"), StandardCopyOption.REPLACE_EXISTING);
+    public static void moveFile(String srcIp, String dstIp, String fileName) throws IOException {
+        Path src = Paths.get(BASE + srcIp + "/" + fileName + ".txt");
+        Path dstDir = Paths.get(BASE + dstIp);
+        if (!Files.exists(dstDir)) Files.createDirectories(dstDir);
+        Files.move(src, dstDir.resolve(fileName + ".txt"), StandardCopyOption.REPLACE_EXISTING);
     }
 
-    public static boolean fileExists(String nodeIp, String fileName) {
-        return Files.exists(Paths.get(BASE_DIR + nodeIp + "/" + fileName + ".txt"));
+    public static boolean fileExists(String ip, String fileName) {
+        return Files.exists(Paths.get(BASE + ip + "/" + fileName + ".txt"));
     }
 }
